--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     </div>
                 </div>
                 <div class="slider-img-container">
-                    <img src="images/burger.png" alt="" class="burger-img" data-burger="active">
+                    <img src="images/burger.png" alt="burger-images" class="burger-img" data-burger="active">
 
-                    <img src="images/cocktail-1.png" alt="" class="cocktail-img" data-cocktail="inactive-1">
+                    <img src="images/cocktail-1.png" alt="cocktail image" class="cocktail-img" data-cocktail="inactive-1">
                 </div>
             </section>
         </div>
@@ -179,9 +179,9 @@
                 <p>12:00 PM - 02:00 Am</p>
             </div>
             <div class="socials">
-                <a href="instagram.com" target="_blank" class="secondary-color"> <i class="fa-brands fa-instagram fa-3x"></i></a>
-                <a href="facebook.com" target="_blank" class="secondary-color"> <i class="fa-brands fa-facebook fa-3x"></i></a>
-                <a href="twitter.com" class="secondary-color" target="_blank"><i class="fa-brands fa-twitter fa-3x"></i></a>
+                <a href="https://www.instagram.com" target="_blank" class="secondary-color"> <i class="fa-brands fa-instagram fa-3x"></i></a>
+                <a href="https://www.facebook.com" target="_blank" class="secondary-color"> <i class="fa-brands fa-facebook fa-3x"></i></a>
+                <a href="https://www.twitter.com" class="secondary-color" target="_blank"><i class="fa-brands fa-twitter fa-3x"></i></a>
             </div>
             <div> 
                 <h4>
