--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="main-section" data-background="inactive">
         <div class="container">
             <header class="header transparent-header">
-                <img src="./Images/favicon.ico" alt="logo" class="logo" onclick="document.location='index.html'">
+                <img src="./Images/logo.png" alt="logo" class="logo" onclick="document.location='index.html'">
                 <div class="mobile-toggle-container">
                     <!-- open Icon -->
                     <svg width="32" height="18" xmlns="http://www.w3.org/2000/svg" class="mobile-menu-toggle" aria-controls="nav-menu" data-active="true"><g fill="#C47127" fill-rule="evenodd"><path d="M0 0h32v2H0zM0 8h32v2H0zM0 16h32v2H0z"/></g></svg>
@@ -66,9 +66,9 @@
                     </div>
                 </div>
                 <div class="slider-img-container">
-                    <img src="./images/burger.png" alt="burger-images" class="burger-img" data-burger="active">
+                    <img src="./Images/burger.png" alt="burger-images" class="burger-img" data-burger="active">
 
-                    <img src="./images/cocktail-1.png" alt="cocktail image" class="cocktail-img" data-cocktail="inactive-1">
+                    <img src="./Images/cocktail-1.png" alt="cocktail image" class="cocktail-img" data-cocktail="inactive-1">
                 </div>
             </section>
         </div>
@@ -93,7 +93,7 @@
                     </button>
                 </div>
             </div>
-            <img src="images/betmomoloungebar_4.jpg" alt="" class="section-one-img-one">
+            <img src="./Images/betmomoloungebar_4.jpg" alt="" class="section-one-img-one">
         </div>
         <!-- section 3 -->
     </section>
@@ -113,7 +113,7 @@
     <!-- section 4 -->
     <section class="index-section-4">
         <div class="grid">
-            <img src="./images/betmomoloungebar_3.jpg" alt="" class="section-one-img-one">
+            <img src="./Images/betmomoloungebar_3.jpg" alt="" class="section-one-img-one">
             <div class="section-four-text-content">
                 <div class="reservation">
                     <h3>Reservations</h3>
@@ -129,14 +129,14 @@
         <h2 class="text-center">Follow Us</h2>
         <h2 class="ig-handle text-center">@betmomoloungebar</h2>
         <div class="grid-4 container">
-            <img src="./images/betmomoloungebar_2.jpg" alt="">
-            <img src="./images/mewe-img-1670283102441.jpg" alt="">
-            <img src="./images/mewe-img-1670283115991.jpg" alt="">
-            <img src="./images/mewe-img-1670283125908.jpg" alt="">
-            <img src="./images/betmomoloungebar_3.jpg" alt="">
-            <img src="./images/mewe-img-1670283158530.jpg" alt="">
-            <img src="./images/mewe-img-1670283173507.jpg" alt="">
-            <img src="./images/betmomoloungebar_2.jpg" alt="">
+            <img src="./Images/betmomoloungebar_2.jpg" alt="">
+            <img src="./Images/mewe-img-1670283102441.jpg" alt="">
+            <img src="./Images/mewe-img-1670283115991.jpg" alt="">
+            <img src="./Images/mewe-img-1670283125908.jpg" alt="">
+            <img src="./Images/betmomoloungebar_3.jpg" alt="">
+            <img src="./Images/mewe-img-1670283158530.jpg" alt="">
+            <img src="./Images/mewe-img-1670283173507.jpg" alt="">
+            <img src="./Images/mewe-img-1670806551316.jpg" alt="">
         </div>
     </section>
     <!-- footer -->
