--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="css/style.css">
         <script defer src="script/app.js"></script>
-        <title>BetMomo Lounge | Our Gallery</title>
+        <title>BetMomo Lounge | Contact Us</title>
     </head>
     <body class="section-bg">
         <div class="wrapper">
             <div class="header-fullwidth">
                 <header class="header container">
-                    <img src="images/betmomoT.png" alt="" class="logo" onclick="document.location='index.html'">
+                    <img src="./Images/logo.png" alt="logo" class="logo" onclick="document.location='index.html'">
                     <div class="mobile-toggle-container">
                         <!-- open Icon -->
                         <svg width="32" height="18" xmlns="http://www.w3.org/2000/svg" class="mobile-menu-toggle" aria-controls="nav-menu" data-active="true"><g fill="#f1ec16" fill-rule="evenodd"><path d="M0 0h32v2H0zM0 8h32v2H0zM0 16h32v2H0z"/></g></svg>
