--- a/index.html
+++ b/index.html
@@ -43,9 +43,14 @@
                     </ul>
                 </nav>
             </header>
-            <section class="hero">
+            <div class="hero">
                 <div class="welcome-msg">
                     <h2 class="text-center">Welcome to <span class="bm-bg"> <span class="bet">Bet</span><span class="momo">Momo</span></span> Lounge</h2>
+                </div>
+                <div class="slider-img-container">
+                    <img src="./Images/burger.png" alt="burger-images" class="burger-img" data-burger="active">
+
+                    <img src="./Images/cocktail-1.png" alt="cocktail image" class="cocktail-img" data-cocktail="inactive-1">
                 </div>
                 <div class="hero-text-container">
                     <div class="text-container-1" data-text-slider-1="active">
@@ -65,12 +70,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="slider-img-container">
-                    <img src="./Images/burger.png" alt="burger-images" class="burger-img" data-burger="active">
-
-                    <img src="./Images/cocktail-1.png" alt="cocktail image" class="cocktail-img" data-cocktail="inactive-1">
-                </div>
-            </section>
+            </div>
         </div>
     </main>
                 <!-- section 2 -->
@@ -113,7 +113,7 @@
     <!-- section 4 -->
     <section class="index-section-4">
         <div class="grid">
-            <img src="./Images/betmomoloungebar_3.jpg" alt="" class="section-one-img-one">
+            <img src="./Images/betmomoloungebar_3.jpg" alt="" class="section-four-img-one">
             <div class="section-four-text-content">
                 <div class="reservation">
                     <h3>Reservations</h3>
